# togiapp

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  togiapp
src/headers/: Connection.hpp  Dashboard.hpp  Login.hpp  Prefs.hpp
src/sources/: Connection.cpp  Dashboard.cpp  Login.cpp  main.cpp
